helm/openwebui-host-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-svc
  namespace: ai
spec:
  type: NodePort
  selector:
    app.k8s.guru/ollama: "true"
  ports:
    - name: http
      port: 11434
      targetPort: 11434
      nodePort: 31434
